# AdaGrid-KAN

./: .gitignore  LICENSE  README.md  dashboard.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  app.py  run_manager.py  schemas.py
docs/: quick_start.md
docs/superpowers/plans/: 2026-07-12-kan-training-dashboard.md
docs/superpowers/specs/: 2026-07-12-kan-training-dashboard-design.md
examples/: ab_comparison.py  ablation_study.py  classification_experiment.py  ecogrow_comparison.py  generate_dashboard.py  real_dataset_regression.py  toy_regression.py
runs/20260712-143154-400360-fixed-seed42/: config.json  fit_data.json  metrics.jsonl  summary.json
runs/20260712-143604-473450-adagrid-seed42/: config.json  events.json  fit_data.json  metrics.jsonl  summary.json
runs/20260712-143615-663717-ecogrow-seed42/: config.json  events.json  metrics.jsonl
runs/20260712-143625-179634-fixed-seed42/: config.json  fit_data.json  metrics.jsonl  summary.json
runs/20260712-143633-407112-ecogrow-seed42/: fit_data.json
runs/20260712-144153-417549-ecogrow-seed42/: summary.json
src/: __init__.py  grid_scheduler.py  kan_layer.py
src/training/: __init__.py  datasets.py  persistence.py  runner.py
tests/: test_backend_api.py  test_ecogrow_scheduler.py  test_kan_layer.py  test_training_dashboard.py
visualization/: ecogrow_live_comparison.html
