[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adagrid-kan"
version = "0.1.0"
description = "Cost-Aware Reversible Grid Expansion for Kolmogorov-Arnold Networks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["KAN", "B-spline", "adaptive grid", "neural network", "PyTorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/your-org/AdaGrid-KAN"
Repository = "https://github.com/your-org/AdaGrid-KAN"
Issues = "https://github.com/your-org/AdaGrid-KAN/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
